# FeelsEmuGB

./: .gitignore  CMakeLists.txt  FeelsEmuGB.sln  README.md  setup.bat
Gameboy/: Gameboy.vcxproj  Gameboy.vcxproj.filters
Gameboy/src/: gameboy.cpp
docs/: Notes.txt  PROJECT_STATUS.md
src/: GameBoySettings.cpp  GameBoySettings.h  main.cpp  pch.h
src/core/: Address.h  Bus.cpp  Bus.h  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  CartridgeHeader.h  Gameboy.cpp  Gameboy.h  Interrupts.h  Joypad.cpp  Joypad.h  MBC.cpp  MBC.h  MMU.cpp  MMU.h  PPU.cpp  PPU.h  Register.h  Timer.cpp  Timer.h
src/core/Instructions/: CPUOpcodes.cpp
src/editor/: Editor.cpp  Editor.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/graphics/: Renderer.cpp  Renderer.h
src/utils/: Debug.h  Filepaths.cpp  Filepaths.h  MacroTemplates.cpp  Savestates.h
src/utils/VFS/: VFS.cpp  VFS.h
